--- a/assets/cssData/pusyuuStyle.css
+++ b/assets/cssData/pusyuuStyle.css
@@ -7,7 +7,7 @@ body {
 
 /*****************************************
   *----------------------------------
-  |  ThisCssVersion: 20.10.5      |
+  |  ThisCssVersion: 20.10.6      |
   |  © 2021-2024 By PusyuuWanko/  |
   |  LastUpdate: 2024-03-21       |
   |  License: MITLicense          |
@@ -1727,9 +1727,10 @@ nav > ul > li > a:hover::before {
 
   .footer {
     padding-bottom: 0;
-    display: block;
     padding: 20px;
     text-align: center;
+    gap: 10px;
+    flex-direction: column;
   }
 
   .footer_wrapper {
@@ -1740,6 +1741,7 @@ nav > ul > li > a:hover::before {
   .footer > .normal-box {
     width: auto;
     height: 330px;
+    
   }
 
   /* sm tb版 大きいカード調整部 
